# app/controllers/auth.js
@@ -153,6 +153,52 @@ const AuthController = {
         });
     },
 
+    update: function(req, res) {
+        
+        let errors = 0;
+        let errorData = {};
+
+        if(!req.body.user_firstname){
+            errorData.user_firstname = "El campo nombre es requerido";
+            errors++;
+        }
+        if(!req.body.user_lastname){
+            errorData.user_lastname = "El campo apellido es requerido";
+            errors++;
+        }
+
+        if(errors){
+            return res.status(403).send({
+                status:403,
+                errors: errorData,
+                message: 'Error en envío de datos',
+            });
+        }
+
+        const user_id = req.token.user_id;
+        
+        const userData = {
+            user_firstname: req.body.user_firstname,
+            user_lastname: req.body.user_lastname,
+        };
+
+        AppModel.update('user', userData, { user_id: user_id }, function(error, result) {
+            if(error){
+                return res.status(500).send({
+                    status: 500,
+                    message: 'Error interno del servidor',
+                });
+            }
+            if(result){
+                return res.status(201).send({
+                    status: 200,
+                    message: 'Se ha actualizado exitosamente',
+                });
+            }
+        });
+
+    },
+
 };
 
 module.exports = AuthController;
