# app/routes/swagger.json
@@ -159,7 +159,6 @@
           },
           {
             "in": "body",
-            "name": "userComment",
             "description": "Datos del comentario",
             "schema": {
               "type": "object",
@@ -326,7 +325,6 @@
         "parameters": [
           {
             "in": "body",
-            "name": "userLogin",
             "description": "Credenciales del usuario",
             "schema": {
               "type": "object",
@@ -374,7 +372,6 @@
         "parameters": [
           {
             "in": "body",
-            "name": "userLogin",
             "description": "Credenciales del usuario",
             "schema": {
               "type": "object",
@@ -434,6 +431,59 @@
         ],
         "produces": [
           "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Se cargaron los datos exitosamente"
+          },
+          "401": {
+            "description": "No tienes acceso a la información"
+          },
+          "404": {
+            "description": "No existen los datos que buscas"
+          },
+          "500": {
+            "description": "Error interno del servidor"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "summary": "Actualizar Perfil",
+        "description": "",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "description": "Datos del usuario",
+            "schema": {
+              "type": "object",
+              "required": [
+                "user_firstname",
+                "user_lastname"
+              ],
+              "properties": {
+                "user_firstname": {
+                  "type": "string"
+                },
+                "user_lastname": {
+                  "type": "string"
+                }
+              }
+            }
+          }
         ],
         "responses": {
           "200": {
